# backend-sbv

./: .gitignore  CHANGELOG.md  README.md  SESSIONS.md  roadmap.md
backend/: .env.example  .gitignore  API_README.md  add_sources.py  backfill_search.py  check_supabase.py  demo_search.sh  pyproject.toml  start.sh  status.sh  stop.sh  test_conn.py  test_db_connection.py  test_direct_ssl.py  test_ingest_all.py  test_no_ssl.py  test_pooler.py  test_search.py  test_sse_complete.py  test_sse_publish.py  test_supabase_direct.py  trigger_events.py  trigger_ingest.py  trigger_summary.py
backend/alembic/: env.py
backend/alembic/versions/: 0fa290b0f956_create_active_cluster_views.py  12b79d268a23_add_cluster_summaries_table_with_.py  22211ae2db72_add_embedding_and_clustering_tables.py  5452e0bf9331_create_initial_tables_for_sources_and_.py  9897e6a21d7f_add_trend_metrics_and_events_tables.py  f73907598549_create_initial_tables_for_sources_and_.py
backend/app/: main.py
backend/app/api/: deps.py  routes_search.py  routes_stream.py  routes_topics.py
backend/app/core/: config.py  db.py  meili.py  mistral.py
backend/app/models/: __init__.py  article.py  base.py  cluster.py
backend/app/services/: summarize.py  trending.py
backend/app/workers/: celery_app.py  tasks.py
backend/docker/: docker-compose.yml
