[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
celery = "^5.3.0"
httpx = "^0.28"
structlog = "^24.1.0"
pydantic-settings = "^2.6"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
feedparser = "^6.0.12"
trafilatura = "^2.0.0"
simhash = "^2.1.2"
mistralai = "^1.9.10"
pgvector = "^0.4.1"
nest-asyncio = "^1.6.0"
sse-starlette = "^3.0.2"
meilisearch-python-async = "^1.8.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.10"}

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
